Simplified some stuff

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -63,7 +63,7 @@
 				</section>
 
 				<section>
-					<img src="_images/avatar-20170726.png" alt="Me" style="float:left;width:160px;" class="no-border">
+					<img src="_images/avatar-hd.png" alt="Me" style="float:left;width:160px;" class="no-border">
 
 					<div>
 						<ul class="empty">
@@ -76,7 +76,7 @@
 					</div>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h2>Motivação</h2>
 
 					<aside class="notes">
@@ -92,7 +92,7 @@
 					</aside>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h2>Por Que Participar?</h2>
 				</section>
 
@@ -134,19 +134,6 @@
 				</section>
 
 				<section>
-					<h4>Por Que Participar?</h4>
-
-					<h2>Fator abandono.</h2>
-
-					<aside class="notes">
-						Software estável recebe poucas atualizações, mas as pessoas
-						tendem a ver software com poucas atualizações como "abandonado".
-						Alguém olhando, comentando, discutindo features, explicando
-						como fazer as coisas deixa o projeto "vivo".
-					</aside>
-				</section>
-
-				<section>
 					<h4>Por que participar?</h4>
 
 					<p>
@@ -156,11 +143,11 @@
 					</p>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h2>Como Participar</h2>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 
 					<h2>Contribuir com código</h2>
@@ -170,34 +157,6 @@
 					<h3>Enviar Código</h3>
 
 					<p>Enviar código com novas features é a forma mais direta <span class="fragment">mas não a mais fácil.</span></p>
-				</section>
-
-				<section>
-					<h3>Enviar Código</h3>
-
-					<ul>
-						<li><strong>Veja o código de conduta.</strong></li>
-						<li class="fragment">Aclimate-se ao ambiente do projeto <span class="fragment">(IRC, Maillist, Slack, etc)</span></li>
-						<li class="fragment">Seguir os padrões de codificação do projeto <span class="fragment">(HACKING.md, CONTRIBUTING)</span></li>
-						<li class="fragment">Entender os objetivos do projeto <span class="fragment">(isso está na cabeça dos mantenedores)</span></li>
-					</ul>
-
-					<p class="fragment"><small>Anedota: Mitter.</small></p>
-
-					<aside class="notes">
-						Mitter foi meu projeto pessoal de um cliente Twitter. Meu plano
-						era ter a funcionalidade básica e o mínimo possível de 
-						dependências.
-
-						Mitter tinha suporte apenas ao retweet nativo do sistema (aquele
-						que aparece como um link para outro tweet hoje), mas algumas
-						pessoas ainda usavam o "RT" pra indicar retweet.
-
-						Um usuário pediu pra criar a feature de retweet antigo. Eu tive
-						que explicar que suportar duas formas diferentes seria mais
-						complexo do que esperado e desejado para o projeto. Felizmente,
-						ele entendeu.
-					</aside>
 				</section>
 
 				<section>
@@ -264,25 +223,6 @@
 				<section>
 					<h3>Enviar Código</h3>
 
-					<p>Algumas vezes, o projeto já está abandonado pelo autor
-						original, mas a comunidade ainda mantém indiretamente.</p>
-
-					<p><small>Anedota: Blackbox.</small></p>
-
-					<aside class="notes">
-						Antes da explosão de gerenciadores *box (Fluxbox, OpenBox),
-						havia o Blackbox. Eu achei um problema com a margem que era
-						possível configurar entre janelas, que era passado inclusive
-						para as bordas da tela. Eu fiz o patch e mandei para a lista
-						de discussão do projeto, mas fui informado que o mantenedor
-						e autor original havia deixado o projeto pra trás, mas o patch
-						iria para um site de patchs para o projeto.
-					</aside>
-				</section>
-
-				<section>
-					<h3>Enviar Código</h3>
-
 					<p>
 						Muito raramente, o desenvolvedor simplesmente não tem tempo
 						para pesquisar como corrigir uma feature que ele mesmo quer
@@ -318,22 +258,6 @@
 				</section>
 
 				<section>
-					<h3>Enviar Código</h3>
-
-					<p>3 coisas:</p>
-
-					<ul>
-						<li class="fragment">Aprenda Git</li>
-						<li class="fragment">Aprenda Inglês</li>
-						<li class="fragment">
-							<strong>
-								Não tenha medo de perguntar alguma coisa porque não sabe; não saber não é defeito.
-							</strong>
-						</li>
-					</ul>
-				</section>
-
-				<section data-transition="zoom-in">
 					<h4>Como Participar</h4>
 					<h2>Traduções</h2>
 				</section>
@@ -343,18 +267,9 @@
 
 					<p>Se você não entende de código, pode ajudar traduzindo
 						a aplicação para a sua língua.</p>
-
-					<p><small>Anedota: Fábio Beneditto</small></p>
-
-					<aside class="notes">
-						Ainda no meu projeto do Mitter, eu tive pedidos de
-						traduzir o aplicativo para a língua deles. Infelizmente
-						Mitter não tinha suporte a traduções e tive que negar
-						a ajuda.
-					</aside>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 					<h2>Documentação</h2>
 				</section>
@@ -377,7 +292,7 @@
 					</p>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 					<h2>Bug reports</h2>
 				</section>
@@ -390,17 +305,6 @@
 						o que causa o problema (uma configuração, o nome do arquivo);
 						se conseguir, envie para o desenvolvedor.
 					</p>
-
-					<p><small>Anedota: Skyrim.</small></p>
-
-					<aside class="notes">
-						Não relacionado com open source, mas eu consigo, até hoje,
-						fazer o Skyrim crashear numa missão. E eu sei exatamente
-						como fazer o jogo explodir. 
-
-						Infelizmente, como Skyrim não é um projeto open source,
-						eu não tenho um bug tracker pra reportar o erro.
-					</aside>
 				</section>
 
 				<section>
@@ -441,7 +345,7 @@
 					</p>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 					<h2>O Fork</h2>
 				</section>
@@ -459,17 +363,6 @@
 				</section>
 
 				<section>
-					<h3>O Fork</h3>
-
-					<p>
-						... e há vezes que um fork, com ajuda da própria comunidade,
-						volta para o projeto original.
-					</p>
-
-					<p><small>Anedota: Compiz, GCC</small></p>
-				</section>
-
-				<section data-transition="zoom-in">
 					<h4>Como Participar</h4>
 					<h2>Artwork</h2>
 				</section>
@@ -487,7 +380,7 @@
 					<p><small>Anedota: Alguma-Coisa-Dog.</small></p>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 					<h2>Doações</h2>
 				</section>
@@ -515,7 +408,7 @@
 					</aside>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
 					<h2>Evangelização</h2>
 				</section>
@@ -535,13 +428,13 @@
 					<p class="fragment"><small>Anedota: Eu ;).</small></p>
 				</section>
 
-				<section data-transition="zoom-in">
+				<section>
 					<h4>Como Participar</h4>
-					<h2>"Obrigado"</h2>
+					<h2>Diga "Obrigado"</h2>
 				</section>
 
 				<section>
-					<h3>"Obrigado"</h3>
+					<h3>Diga "Obrigado"</h3>
 
 					<p>Poucas coisas conseguem ser tão poderosas como um 
 						simples "obrigado por ter feito esse projeto".</p>
@@ -553,24 +446,12 @@
 					<p class="fragment"><small>Anedota: Htop.</small></p>
 				</section>
 
-				<section data-transition="slide-in">
+				<section>
 					<h2>"One more thing..."</h2>
 				</section>
 
 				<section>
 					<img class="stretch" src="_images/community.jpg" alt="">
-				</section>
-
-				<section>
-					<p>
-						"I think that openness as a practice – not just
-						code you can fork but the transparency and
-						accessibility of the development process."
-					</p>
-
-					<p>
-						-- Mike Hoye, Mozilla
-					</p>
 				</section>
 
 				<section data-background='_images/thats-all-folks.jpg'>
