A little more clean up

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -79,6 +79,11 @@
 				<section>
 					<h2>Motivação</h2>
 
+                    <p class="fragment">Ao contrário do que muitos acreditam, é possível
+                    particiar <strong>sem</strong> ser apenas com código</p>
+
+                    <p class="fragment">... e todo mundo sai ganhando.</p>
+
 					<aside class="notes">
 						O que me levou a fazer essa apresentação foi justamente a participação
 						em eventos passados do TcheLinux. Apesar de estar no meio do open source
@@ -166,13 +171,8 @@
 						Por onde começar?
 					</p>
 
-					<ul>
-						<li>Issue tracker <span class="fragment">ou pedir "onde posso ajudar?"</span></li>
-						<li class="fragment">Entenda quais são as suas habilidades</li>
-						<li class="fragment">Procure issues nessas habilidades</li>
-						<li class="fragment">Defina um tempo para se dedicar</li>
-						<li class="fragment">Paciência</li>
-					</ul>
+                    <p class="fragment"><strong>Issue tracker</strong></p>
+                    <p class="fragment">... ou mande um email perguntando "como eu posso ajudar?"</p>
 
 					<aside class="notes">
 						Muitos projetos tem, no seu issue tracker, indicadores
