Added a note about BSL

--- a/licencas-em-10-minutos.html
+++ b/licencas-em-10-minutos.html
@@ -227,6 +227,10 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
                 </section>
 
                 <section>
+                    <h2>"Propriedade Intelectual"</h2>
+                </section>
+
+                <section>
                     <h2>Obrigações/Direitos</h2>
 
                     <h3 class="fragment">... depende.</h3>
@@ -234,19 +238,39 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
 
                 <section>
                     <h3>Obrigações/Direitos</h3>
-                    <h4>BSD 1-Clause</h4>
+                    <h4>BSD 0-Clause</h4>
                     <h5>Direitos</h5>
 
                     <p>Usar o código como quiser</p>
-                    <p class="fragment">... inclui fazer um projeto proprietário fechado</p>
+                    <p class="fragment">... inclui fazer um projeto proprietário fechado.</p>
                 </section>
 
                 <section>
                     <h3>Obrigações/Direitos</h3>
-                    <h4>BSD 1-Clause</h4>
+                    <h4>BSD 0-Clause</h4>
                     <h5>Obrigações</h5>
 
-                    <p>Manter/Mostrar o Copyright</p>
+                    <p>Manter o aviso de copyright nos arquivos.</p>
+                </section>
+
+                <section>
+                    <h3>Obrigações/Direitos</h3>
+                    <h4>BSD 3-Clause</h4>
+                    <h5>Direitos</h5>
+
+                    <p>Usar o código como quiser.</p>
+                </section>
+
+                <section>
+                    <h3>Obrigações/Direitos</h3>
+                    <h4>BSD 3-Clause</h4>
+                    <h5>Obrigações</h5>
+
+                    <ul>
+                    <li>Manter aviso de copyright nos arquivos.</li>
+                    <li>Mostar o aviso de copyright no binário.</li>
+                    <li>Não pode usar o(s) nome(s) do(s) autor(es) original(is) como propaganda.</li>
+                    </ul>
                 </section>
 
                 <section>
@@ -345,8 +369,23 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
                 </section>
 
                 <section>
+                    <h2>Alembic</h2>
+
+                    <p>
+                    Licença: BSD 3-clause<br/>
+                    Pode: Fazer o que que quiser.<br/>
+                    Tem: Que mostrar o copyright no binário final.
+                </section>
+
+                <section>
                     <h2>E aquela história de "É quando o fonte está aberto para
                         todo mundo."?</h2>
+                </section>
+
+                <section>
+                    <h3>BSL</h3>
+
+                    <p>(Business Software License)</p>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
