Finished the licenses stuff

--- a/licencas-em-10-minutos.html
+++ b/licencas-em-10-minutos.html
@@ -81,7 +81,8 @@
 
                     <p class="fragment">"É quando o fonte está aberto para todo mundo."</p>
 
-                    <img src="_images/false.gif" class="fragment"/>
+                    <img src="_images/false.gif" class="fragment" style="float:left"/>
+                    <img src="_images/false.gif" class="fragment" style="float:right"/>
                 </section>
 
                 <section>
@@ -351,9 +352,21 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
 
                     <p>
                     Licença: MIT<br/>
-                    Pode: BSD 1-clause.<br/>
-                    Tem: BSD 1-clause.<br/>
+                    Pode: BSD 0-clause.<br/>
+                    Tem: BSD 0-clause.<br/>
                     </p>
+                </section>
+
+                <section>
+                    <img src="_images/intermission_3696.jpg" class="stretch"/>
+                </section>
+
+                <section>
+                    <h2>E aquela "Propridade Intelectual"?</h2>
+
+                    <p class="fragment">Permanece com o autor da alteração.</p>
+
+                    <small class="fragment">(tipo o Content Aware Filter)</small>
                 </section>
 
                 <section>
@@ -363,8 +376,9 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
                     Licença: Apache<br/>
                     Pode: Mesmo que BSD<br/>
                     Tem: Mesmo que BSD, mas quem contrui para o projeto
-                    automaticamente passa as patentes para o projeto,
-                    perde acesso às patentes se processar alguém do projeto.
+                    automaticamente passa a propriedade intelectual para o
+                    projeto, perde acesso às patentes se processar alguém do
+                    projeto.
                     </p>
                 </section>
 
@@ -378,14 +392,65 @@ Zope Public License 2.1 	ZPL - 2.1 	Redundant with more popular
                 </section>
 
                 <section>
-                    <h2>E aquela história de "É quando o fonte está aberto para
-                        todo mundo."?</h2>
+                    <h3>E aquela história de "É quando o fonte está aberto para todo mundo."?</h3>
+                </section>
+
+                <section>
+                    <h3>"Fonte está aberto para <u>todo mundo</u>"</h3>
+
+                    <p>Licenças tratam de <strong>distribuição</strong>,
+                    indicando que o fontes devem ser disponibilizados junto
+                    como binário.</p>
+
+                    <p class="fragment">(quem não tem acesso ao binário não
+                    teria que ter acesso aos fontes)</p>
+                </section>
+
+                <section>
+                    <h3>"<u>Fonte está aberto</u> para todo mundo"</h3>
+
+                    <p>Só porque o fonte está disponível não significa que é
+                    open source.</p>
                 </section>
 
                 <section>
                     <h3>BSL</h3>
 
                     <p>(Business Software License)</p>
+                </section>
+
+                <section>
+                    <h2>BSL</h2>
+
+                    <p>"The Licensor hereby grants you the right to copy,
+                    modify, create derivative works, redistribute, and make
+                    non-production use of the Licensed Work.""
+                    </p>
+                </section>
+
+                <section>
+                    <h2>BSL</h2>
+
+                    <p>
+                   Effective on the Change Date, or the fourth anniversary of
+                   the first publicly available distribution of a specific
+                   version of the Licensed Work under this License, whichever
+                   comes first, the Licensor hereby grants you rights under the
+                   terms of the Change License, and the rights granted in the
+                   paragraph above terminate.
+                    </p>
+                </section>
+
+                <section>
+                    <h2>BSL</h2>
+
+                    <p>Quem usa?</p>
+
+                    <ul>
+                        <li>MariaDB</li>
+                        <li>MongoDB</li>
+                        <li>Hashicorp (Terraform)</li>
+                    </ul>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
