Added new fact about Rust

--- a/rust-em-10-minutos.html
+++ b/rust-em-10-minutos.html
@@ -369,6 +369,21 @@ fn main() {
                     </p>
                 </section>
 
+                <section>
+                    <img src="_images/one-more-thing.png" class="stretch" />
+                </section>
+
+                <section>
+                    <h2>
+                        <abbr title="Cybersecurity and Infrastructure Security Agency">CISA</abbr>:
+                        <a href="https://www.cisa.gov/news-events/news/urgent-need-memory-safety-software-products">
+                            The Urgent Need for Memory Safety in Software Products
+                        </a>
+                    </h2>
+
+                    <small class="fragment">Released: September 20, 2023</small>
+                </section>
+
                 <section data-background='_images/thats-all-folks.jpg'>
 				</section>
             </div>
