Added more slides for Keynote

--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -84,38 +84,57 @@
                 </section>
 
                 <section>
-                    <!-- bolsista gradução -->
-                    <!-- outros bolsistas -->
-                    <!-- comunidade software livre -->
+                    <img src="_images/who.gif" class="stretch"/>
                 </section>
 
                 <section>
+                    <img src="_images/Unisinos.jpg" class="stretch"/>
+                    <!-- bolsista gradução -->
+                    <!-- outros bolsistas -->
+                    <!-- comunidade software livre -->
+                    <p class="fragment">de 1996 até 2003</p>
+                </section>
+
+                <section>
+                    <img src="_images/python-floripa.png" class="stretch"/>
                     <!-- python floripa, "gaúchos de araque" -->
                 </section>
 
                 <section>
+                    <img src="_images/pytche.png" class="stretch"/>
                     <!-- pytche -->
                     <!-- todo sábado -->
-                </section>
-
-                <section>
                     <!-- reunião só com 3 pessoas -->
+                    <p class="fragment">... até 2020</p>
                 </section>
 
                 <section>
-                    <!-- aprendendo, problemas com pyladies -->
+                    <img src="_images/tchelinux.png" class="stretch">
+                    <p class="fragment">de 2017 até 2019</p>
                 </section>
 
                 <section>
-                    <!-- desde então até 2020 -->
-                </section>
-
-                <section>
-                    <!-- tchelinux,  -->
-                </section>
-
-                <section>
+                    <img src="_images/tchelinux-volta-2019.png" class="stretch">
                     <!-- tchelinux, 2019, 3000km -->
+                    <!-- porto alegre -->
+                    <!-- santa maria -->
+                    <!-- bento gonçalves -->
+                    <!-- bagé -->
+                    <!-- alegrete -->
+                    <!-- santo angelo -->
+                    <!-- pelotas -->
+                    <!-- erechim -->
+                    <!-- novo hamburgo -->
+                    <!-- camaquã -->
+                    <!-- rio grande -->
+                    <!-- caxias do sul -->
+                    <!-- santana do livramento -->
+                    <!-- passo fundo -->
+                    <!-- santa cruz do sul -->
+                </section>
+
+                <section>
+                    <img src="_images/fugindo.png" class="stretch"/>
                 </section>
 
                 <section>
@@ -127,7 +146,7 @@
                 </section>
 
                 <section>
-                    <!-- o que aconteceu em 2020? -->
+                    <h2>O que aconteceu em 2020?</h2>
                 </section>
 
                 <section>
