More stuff in keynote

--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -88,11 +88,19 @@
                 </section>
 
                 <section>
+                    <img src="_images/fast-typing.gif" class="stretch"/>
+                </section>
+
+                <section>
+                    <img src="_images/unpopular-opinion.jpg" class="stretch"/>
+                </section>
+
+                <section>
                     <img src="_images/Unisinos.jpg" class="stretch"/>
                     <!-- bolsista gradução -->
                     <!-- outros bolsistas -->
                     <!-- comunidade software livre -->
-                    <p class="fragment">de 1996 até 2003</p>
+                    <p class="fragment">de 1996 até 1999</p>
                 </section>
 
                 <section>
@@ -138,11 +146,8 @@
                 </section>
 
                 <section>
+                    <img src="_images/rust-in-poa.jpg" class="stretch"/>
                     <!-- Rust in poa -->
-                </section>
-
-                <section>
-                    <!-- até 2020 -->
                 </section>
 
                 <section>
@@ -151,6 +156,7 @@
 
                 <section>
                     <!-- pandemia -->
+                    <img src="_images/covid.jpg" class="stretch"/>
                 </section>
 
                 <section>
