More keynote things

--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -100,7 +100,7 @@
                     <!-- bolsista gradução -->
                     <!-- outros bolsistas -->
                     <!-- comunidade software livre -->
-                    <p class="fragment">de 1996 até 1999</p>
+                    <p>de 1996 até 1999</p>
                 </section>
 
                 <section>
@@ -118,7 +118,6 @@
 
                 <section>
                     <img src="_images/tchelinux.png" class="stretch">
-                    <p class="fragment">de 2017 até 2019</p>
                 </section>
 
                 <section>
@@ -143,11 +142,15 @@
 
                 <section>
                     <img src="_images/fugindo.png" class="stretch"/>
+                    <!-- apresentação de Python no Tchelinux -->
+                    <!-- sugestões para criação de grupos locais -->
+                    <p class="fragment">... até 2019</p>
                 </section>
 
                 <section>
                     <img src="_images/rust-in-poa.jpg" class="stretch"/>
                     <!-- Rust in poa -->
+                    <p class="fragment">... até 2019</p>
                 </section>
 
                 <section>
@@ -160,31 +163,60 @@
                 </section>
 
                 <section>
+                    <img src="_images/teams-video-chat.jpg" class="stretch"/>
                     <!-- remoto -->
                 </section>
 
                 <section>
+                    <img src="_images/telegram.png" style="float:left;max-width:200px;">
+                    <img src="_images/whatsapp.png" style="float:right;max-width:200px;">
                     <!-- chat se tornou o principal meio de comunicação -->
                 </section>
 
                 <section>
+                    <!-- offline/avatars only -->
+                </section>
+
+                <section>
+                    <ul>
+                        <li>X: "Pessoal, alguém trabalha com HTMX? Estou com um problema no load..."</li>
+                        <li>X: "O Json tem [{"title": "Room", "description": "Nome do arquiteto"}]"</li>
+                        <li>Y: "X, você é do ramo de arquitetura?"</li>
+                    </ul>
+                    <!-- off-topic -->
+                </section>
+
+                <section>
+                    <ul>
+                        <li>X: "Y, tentei o que vc falou mas deu o erro A. O que pode ser?"</li>
+                        <li>X: "Responde aí"</li>
+                    </ul>
                     <!-- "responde aí" -->
                     <!-- asynchronous -->
                 </section>
 
                 <section>
+                    <ul>
+                        <li>Rose: "Usuário X tem 1/3 advertências: Não é permitido pirataria no grupo."</li>
+                        <li>X: "Ah, larga dessa frescura."</li>
+                    </ul>
                     <!-- harassment  -->
                     <!-- "ah, larga dessa frescura" -->
                 </section>
 
                 <section>
+                    <ul>
+                        <li>X: "Pessoal, como eu posso fazer A?"</li>
+                        <li>Y: "Bom, por cima, dá pra tentar fazer o seguinte:"</li>
+                        <li>LETÍCIA DIAS: "DINHEIRO GARANTIDO; PIX de R$ 50 RECEBE DE VOLTA R$ 500"</li>
+                    </ul>
                     <!-- ajuda -->
                     <!-- pode fazer isso -->
                     <!-- ROBOZINHO DO PIX -->
                 </section>
 
                 <section>
-                    <!-- GLR, boa noite, qual é o melhor curso em custo benefício de Django ? -->
+                    <p>"Redução da distância do relacionamento inter-impessoal"</p>
                 </section>
 
                 <section>
@@ -197,11 +229,7 @@
                 </section>
 
                 <section>
-                    <!-- produtor de opiniões polêmicas -->
-                </section>
-
-                <section>
-                    <h3>"Algo se perdeu."</h3>
+                    <h3>Algo se perdeu.</h3>
                 </section>
 
                 <section>
@@ -209,6 +237,17 @@
                 </section>
 
                 <section>
+                    <!-- e agora? -->
+                    <!-- voltar com a ideia de pequenos grupos -->
+                    <!--  -->
+                </section>
+
+                <section>
+                    <img src="_images/guido-van-rossum.jpg" class="stretch"/>
+                </section>
+
+                <section>
+                    <img src="_images/100-miles-around-porto-alegre.png" class="stretch"/>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
