--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -100,7 +100,11 @@
                     <!-- bolsista gradução -->
                     <!-- outros bolsistas -->
                     <!-- comunidade software livre -->
-                    <p>de 1996 até 1999</p>
+                    <p>de 1996 até 1998</p>
+                </section>
+
+                <section>
+                    <img src="_images/corridor.jpg" class="stretch"/>
                 </section>
 
                 <section>
@@ -111,6 +115,10 @@
                 <section>
                     <img src="_images/pytche.png" class="stretch"/>
                     <!-- pytche -->
+                </section>
+
+                <section>
+                    <img src="_images/meetup.png" class="stretch"/>
                     <!-- todo sábado -->
                     <!-- reunião só com 3 pessoas -->
                     <p class="fragment">... até 2020</p>
@@ -150,7 +158,13 @@
                 <section>
                     <img src="_images/rust-in-poa.jpg" class="stretch"/>
                     <!-- Rust in poa -->
-                    <p class="fragment">... até 2019</p>
+                </section>
+
+                <section>
+                    <img src="_images/meetup.png" class="stretch"/>
+                    <!-- todo sábado -->
+                    <!-- reunião só com 3 pessoas -->
+                    <p class="fragment">... até 2020</p>
                 </section>
 
                 <section>
@@ -174,7 +188,17 @@
                 </section>
 
                 <section>
+                    <H2>"Tá, mas agora é melhor?"</h2>
+                </section>
+
+                <section>
+                    <h2>Não</h2>
+                    <h3 class="fragment">... sei</h3>
+                </section>
+
+                <section>
                     <!-- offline/avatars only -->
+                    <img src="_images/teams-camera-off.png" class="stretch"/>
                 </section>
 
                 <section>
@@ -229,6 +253,15 @@
                 </section>
 
                 <section>
+                    <!-- problemas de transporte -->
+                </section>
+
+                <section>
+                    <img src="_images/covid.jpg" class="stretch"/>
+                    <!-- covid ainda está aí -->
+                </section>
+
+                <section>
                     <h3>Algo se perdeu.</h3>
                 </section>
 
@@ -240,14 +273,6 @@
                     <!-- e agora? -->
                     <!-- voltar com a ideia de pequenos grupos -->
                     <!--  -->
-                </section>
-
-                <section>
-                    <img src="_images/guido-van-rossum.jpg" class="stretch"/>
-                </section>
-
-                <section>
-                    <img src="_images/100-miles-around-porto-alegre.png" class="stretch"/>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
