--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -66,6 +66,19 @@
             .semi-opaque {
                 background-color: rgba(0, 0, 0, 0.7);
             }
+
+            ul.chat {
+                list-style: none inside;
+            }
+
+            ul.chat li {
+                font-family: monospace;
+                font-size: 80%;
+            }
+
+            ul.chat li span {
+                font-weight: bold;
+            }
         </style>
     </head>
 
@@ -108,6 +121,7 @@
                 </section>
 
                 <section>
+                    <p>(2016)</p>
                     <img src="_images/python-floripa.png" class="stretch"/>
                     <!-- python floripa, "gaúchos de araque" -->
                 </section>
@@ -202,41 +216,53 @@
                 </section>
 
                 <section>
-                    <ul>
-                        <li>X: "Pessoal, alguém trabalha com HTMX? Estou com um problema no load..."</li>
-                        <li>X: "O Json tem [{"title": "Room", "description": "Nome do arquiteto"}]"</li>
-                        <li>Y: "X, você é do ramo de arquitetura?"</li>
+                    <ul class="chat">
+                        <li><span>X:</span> "Pessoal, alguém trabalha com HTMX? Estou com um problema no load..."</li>
+                        <li><span>X:</span> "O Json tem [{"title": "Room", "description": "Nome do arquiteto"}]"</li>
+                        <li><span>Y:</span> "X, você é do ramo de arquitetura?"</li>
                     </ul>
                     <!-- off-topic -->
                 </section>
 
                 <section>
-                    <ul>
-                        <li>X: "Y, tentei o que vc falou mas deu o erro A. O que pode ser?"</li>
-                        <li>X: "Responde aí"</li>
+                    <img src="_images/what.jpg" class="stretch"/>
+                </section>
+
+                <section>
+                    <ul class="chat">
+                        <li><span>X:</span> "Y, tentei o que vc falou mas deu o erro A. O que pode ser?"</li>
+                        <li><span>X:</span> "Responde aí"</li>
                     </ul>
                     <!-- "responde aí" -->
                     <!-- asynchronous -->
                 </section>
 
                 <section>
-                    <ul>
-                        <li>Rose: "Usuário X tem 1/3 advertências: Não é permitido pirataria no grupo."</li>
-                        <li>X: "Ah, larga dessa frescura."</li>
+                    <img src="_images/support-unhappy.jpg" class="stretch"/>
+                </section>
+
+                <section>
+                    <ul class="chat">
+                        <li><span>Rose:</span> "Usuário X tem 1/3 advertências: Não é permitido pirataria no grupo."</li>
+                        <li><span>X:</span> "Ah, larga dessa frescura."</li>
                     </ul>
                     <!-- harassment  -->
                     <!-- "ah, larga dessa frescura" -->
                 </section>
 
                 <section>
-                    <ul>
-                        <li>X: "Pessoal, como eu posso fazer A?"</li>
-                        <li>Y: "Bom, por cima, dá pra tentar fazer o seguinte:"</li>
-                        <li>LETÍCIA DIAS: "DINHEIRO GARANTIDO; PIX de R$ 50 RECEBE DE VOLTA R$ 500"</li>
+                    <ul class="chat">
+                        <li><span>X:</span> "Pessoal, como eu posso fazer A?"</li>
+                        <li><span>Y:</span> "Bom, por cima, dá pra tentar fazer o seguinte:"</li>
+                        <li><span>LETÍCIA DIAS:</span> "DINHEIRO GARANTIDO; PIX de R$ 50 RECEBE DE VOLTA R$ 500"</li>
                     </ul>
                     <!-- ajuda -->
                     <!-- pode fazer isso -->
                     <!-- ROBOZINHO DO PIX -->
+                </section>
+
+                <section>
+                    <img src="_images/tired.jpg" class="stretch"/>
                 </section>
 
                 <section>
@@ -253,7 +279,12 @@
                 </section>
 
                 <section>
+                    <img src="_images/bus-full.jpg" class="stretch"/>
                     <!-- problemas de transporte -->
+                </section>
+
+                <section>
+                    <img src="_images/no-parking-space.jpg" class="stretch"/>
                 </section>
 
                 <section>
@@ -266,13 +297,15 @@
                 </section>
 
                 <section>
-                    <!-- quem não aprende com a história está fadado a repeti-la -->
+                    <h2>E agora?</h2>
                 </section>
 
                 <section>
-                    <!-- e agora? -->
-                    <!-- voltar com a ideia de pequenos grupos -->
-                    <!--  -->
+                    <img src="_images/travolta.gif" class="stretch"/>
+                </section>
+
+                <section>
+                    <img src="_images/travoltas.gif" class="stretch"/>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
