--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -91,6 +91,7 @@
 
                 <section data-background="_images/drops.jpg" data-header>
                     <h2 class="semi-opaque">
+                        Comunidades:<br/>
                         Ganhamos Algo,<br/>
                         Perdemos Algo
                     </h2>
@@ -145,21 +146,21 @@
                 <section>
                     <img src="_images/tchelinux-volta-2019.png" class="stretch">
                     <!-- tchelinux, 2019, 3000km -->
-                    <!-- porto alegre -->
-                    <!-- santa maria -->
-                    <!-- bento gonçalves -->
-                    <!-- bagé -->
                     <!-- alegrete -->
-                    <!-- santo angelo -->
-                    <!-- pelotas -->
+                    <!-- bagé -->
+                    <!-- bento gonçalves -->
+                    <!-- camaquã -->
+                    <!-- caxias do sul -->
                     <!-- erechim -->
                     <!-- novo hamburgo -->
-                    <!-- camaquã -->
-                    <!-- rio grande -->
-                    <!-- caxias do sul -->
-                    <!-- santana do livramento -->
                     <!-- passo fundo -->
+                    <!-- pelotas -->
+                    <!-- porto alegre -->
+                    <!-- rio grande -->
                     <!-- santa cruz do sul -->
+                    <!-- santa maria -->
+                    <!-- santana do livramento -->
+                    <!-- santo angelo -->
                 </section>
 
                 <section>
@@ -197,7 +198,7 @@
 
                 <section>
                     <img src="_images/telegram.png" style="float:left;max-width:200px;">
-                    <img src="_images/whatsapp.png" style="float:right;max-width:200px;">
+                    <img src="_images/whatsapp.png" style="float:right;max-width:300px;">
                     <!-- chat se tornou o principal meio de comunicação -->
                 </section>
 
@@ -254,7 +255,16 @@
                     <ul class="chat">
                         <li><span>X:</span> "Pessoal, como eu posso fazer A?"</li>
                         <li><span>Y:</span> "Bom, por cima, dá pra tentar fazer o seguinte:"</li>
-                        <li><span>LETÍCIA DIAS:</span> "DINHEIRO GARANTIDO; PIX de R$ 50 RECEBE DE VOLTA R$ 500"</li>
+                        <li>
+                            <span>LETÍCIA DIAS:</span> 
+                            "DINHEIRO GARANTIDO!<br/>
+                            PIX de R$ 50 RECEBE DE VOLTA R$ 500<br/>
+                            PIX de R$ 100 RECEBE DE VOLTA R$ 1000<br/>
+                            PIX de R$ 500 RECEBE DE VOLTA R$ 5000<br/>
+                            PIX de R$ 1000 RECEBE DE VOLTA R$ 10000<br/>
+                            <br/>
+                            RETORNO GARANTIDO!"<br/>
+                        </li>
                     </ul>
                     <!-- ajuda -->
                     <!-- pode fazer isso -->
@@ -306,6 +316,10 @@
 
                 <section>
                     <img src="_images/travoltas.gif" class="stretch"/>
+                </section>
+
+                <section>
+                    <img src="_images/im-very-intelligent.jpg" class="stretch"/>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
